    * MPlayer -af help
    * missing audio plugins (extrastereo, volnorm) converted to audio filters
    * sine sweep generator audio filter
    * hrtf audio filter to convert multichannel audio to 2 channel output
      for headphones, preserving the spatiality of the sound
    * big-endian fixes in rgb2rgb converter
    * yuv2rgb Altivec optimization fixes
    * support for LADSPA plugins

    GUI:
    * unified audio options dialog, also for ALSA
    * redrawing limited, decreases CPU usage in audio-only case
    * icons for the context menu
    * doublesize bug fixed
    * slowdown after opening the preferences panel bug fixed
    * remaining messages moved to help file for translation
    * slowdown after using the preferences panel fixed

    Encoding:
    * x264 encoder support
    * support for MP2 encoding with libtoolame
    * libavcodec "turbo mode" to speed up 2-pass encoding
    * support for 3-pass encode for libavcodec and x264
    * XviD encoder and decoder modules updated to API-4.1 (XviD-1.1.x)
    * flush remaining frames at end of encoding process

    Others:
    * -loop and -shuffle now work together
    * better EDL support
    * some --disable configure options finally work (mp3lib, liba52, libmpeg2)
    * framestepping
    * change playback speed during playback
    * some crashes with binary codecs fixed
    * subtitle alignment support for SAMI files
    * also support Windows path separator '\'
    * FriBiDi fixes for comma handling in Hebrew subtitles
    * -crash-debug option to attach gdb automatically after crashes
    * gcc 4 compilation fixes
    * compilation fixes for many files in the TOOLS directory
    * infamous "stuck mouse button" bug fixed, new -key-fifo-size option
    * reduced verbosity of MPlayer's output somewhat
    * -identify now prints some information about available languages
    * double buffering (-double) is now default
    * many memleaks fixed


  pre5try2: December 15, 2004

    Security: